# SDD-test

./: .cursorrules  .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  docker-compose.prod.yml
.specify/: 1_intent.md  2_spec.md  3_plan.md  (+1 more)
backend/: .dockerignore  .importlinter  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_and_refresh_tokens.py  002_create_domain_tables.py  003_create_taxonomy_and_results.py  004_add_header_fingerprint.py
backend/data/staging/: 7.xlsm
backend/scripts/: seed_dummy_user.py
backend/src/marketplace_conciliator/: main.py  settings.py
backend/src/marketplace_conciliator/auth/: __init__.py
backend/src/marketplace_conciliator/ingestion/: __init__.py  block_locator.py  column_suggester.py  csv_parser.py  deduplicator.py  excel_parser.py  header_fingerprint.py  remembered_mapping.py  router.py  sku_normalizer.py  source_parser.py
backend/src/marketplace_conciliator/mapping/: __init__.py
backend/src/marketplace_conciliator/platform/: __init__.py  deps.py  health.py  recovery.py
backend/src/marketplace_conciliator_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_block_locator.py  test_canonical_fixtures.py  test_catalog_health_api.py  test_column_suggester.py  test_error_classifier.py  test_export.py  test_export_api.py  test_header_fingerprint.py  test_health.py  test_mapping_api.py  test_metrics_api.py  test_migrations_auth.py  test_migrations_domain.py  test_migrations_taxonomy.py  test_persistence.py  test_preview_api.py  test_process_and_status_api.py  test_remembered_mapping_api.py  test_reporting_families.py  test_reporting_families_api.py  test_reporting_metrics.py  test_runs_api.py  test_runs_history_api.py  test_settings.py  test_sku_normalizer.py  test_source_parsers.py  test_task_runner.py  test_taxonomy_api.py
backend/tests/.staging_export_probe/: 2.xlsx
backend/tests/.staging_remembered/: 5.csv
backend/tests/bdd/: test_ca_01_dynamic_mapping.py  test_ca_02_reconciliation.py  test_ca_03_deduplication.py  test_ca_05_error_families.py
backend/tests/features/: ca_01_dynamic_mapping.feature  ca_02_reconciliation.feature  ca_03_deduplication.feature  ca_05_error_families.feature
backend/tests/fixtures/: README.md
(+76 files in other folders)
